--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "jspdf": "^2.5.2",
@@ -23,7 +25,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.3",
     "recharts": "^3.6.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
